--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2,10 +2,25 @@ body{
     background-color:transparent;
 }
 
-header{
-    background-color: blue;
+.headerazul{
+    background-color: rgb(109, 109, 247);
 }
 
-div{
-    background-color: black;
+.navverde{
+    background-color: rgb(177, 238, 117);
 }
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #a4e6a4;
+  }
