--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,4 +1,4 @@
-body{
+.bodyindex{
     background-color:rgb(211, 211, 211);
 }
 .fazul{
@@ -21,26 +21,52 @@ tr:nth-child(even) {
     background-color: #a4e6a4;
 }
 .loginad{
-    margin-left: 300px;
+    margin-left: 180px;
     margin-top: 50px;
     background-color: rgb(177, 238, 117);
     width: 300px;
     height: 240px;    
 }
 .tcentrado{
-    margin-left: 15px;
+    margin-left: 50px;
 }
 .titulo{
-    margin-left: 20px;
+    margin-left: 30px;
 }
 .centrado{
-    margin-left: 60px;
+    margin-left: 100px;
 }
 
 #wrapper {
     width: 500px;
     display: flex;
 }
-#first {
-    width: 300px;
+.window-notice {
+    background: rgba(33, 41, 52, .85);
+    left: 0;
+    bottom: 0;
+    right: 0;
+    top: 0;
+    display: flex;
+    position: fixed;
+    z-index: 999;
+}
+.window-notice .content {
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(33, 41, 52, .75);
+    box-sizing: content-box;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    max-width: 600px;
+    min-width: 320px !important;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    padding: 2rem;
+    font-size: 1.3rem;
+}
+.remroll{
+    font-size: 50px;
 }
