--- a/html/css/form-login.css
+++ b/html/css/form-login.css
@@ -4,24 +4,22 @@
     box-sizing: border-box;
 }
 
-.body{
-    background-image: url(/html/img/fondo-login.jpg);
-}
-
 .formulario-login {
     width: 400px;
     background: #24303c;
     padding: 30px;
     margin: auto;
     margin-top: 100px;
-    border-radius: 6px;
+    border-radius: 12px;
     font-family: 'calibri';
     color: white;
+    box-shadow: 0 0 30px 0 black;
 }
 
 .formulario-login h4 {
     font-size: 24px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .controles {
@@ -58,4 +56,7 @@
     border: none;
     padding: 12px;
     margin: 4px;
+    color: white;
+    font-family: 'calibri';
+    font-size: 18px;
 }
