--- a/html/css/form-login.css
+++ b/html/css/form-login.css
@@ -28,7 +28,8 @@
     padding: 10px;
     border-radius: 4px;
     margin-bottom: 16px;
-    border: 1px solid #1f53c5;
+    border: none;
+    border-bottom: 1px solid #1f53c5;
     font-family: 'calibri';
     font-size: 18px;
     color: white;
