--- a/html/css/form-login.css
+++ b/html/css/form-login.css
@@ -58,6 +58,7 @@
     border: none;
     padding: 12px;
     margin: 4px;
+    margin-top: 12px;
     color: white;
     font-family: 'calibri';
     font-size: 18px;
