--- a/html/css/Mantenedor.css
+++ b/html/css/Mantenedor.css
@@ -53,26 +53,42 @@ th{
     color: white;
     background-color: transparent;
 }
+
+option{
+    background-color: #2695a9;
+}
+
+.botones{
+        width: 80px;
+        background: #3daa7da4;
+        border: none;
+        border-radius: 4px;
+        padding: 12px;
+        margin: 4px;
+        margin-top: 12px;
+        color: white;
+        font-family: 'calibri';
+        font-size: 18px;
+}
 .vertical-menu {
     width: 100%;
     height: 800px;
     background: -webkit-linear-gradient(left, #64be99, rgba(255, 255, 255, 0));
-    border-radius: 12px;
   }
   
   .vertical-menu a {
-    color: white; /* Black text color */
-    display: block; /* Make the links appear below each other */
-    padding: 12px; /* Add some padding */
-    text-decoration: none; /* Remove underline from links */
+    color: white;
+    display: block;
+    padding: 12px;
+    text-decoration: none; 
   }
   
   .vertical-menu a:hover {
-    background: -webkit-linear-gradient(left, #16af6f, rgba(255, 255, 255, 0)); /* Dark grey background on mouse-over */
+    background: -webkit-linear-gradient(left, #16af6f, rgba(255, 255, 255, 0));
   }
   
   .vertical-menu a.active {
-    background: -webkit-linear-gradient(left, #128f5b,  rgba(255, 255, 255, 0)); /* Add a green color to the "active/current" link */
+    background: -webkit-linear-gradient(left, #128f5b,  rgba(255, 255, 255, 0));
     color: white;
     overflow: hidden;
   }
@@ -87,3 +103,5 @@ th{
 #second {
     width: 85%;
 }
+
+::-webkit-input-placeholder { color: white; } 
