--- a/html/css/Mantenedor.css
+++ b/html/css/Mantenedor.css
@@ -70,6 +70,12 @@ option{
         font-family: 'calibri';
         font-size: 18px;
 }
+
+.botones a{
+    text-decoration: none;
+    color: white;
+}
+
 .vertical-menu {
     width: 100%;
     height: 800px;
