--- a/html/css/formulario-login.css
+++ b/html/css/formulario-login.css
@@ -27,6 +27,7 @@
     background: #24303c;
     padding: 10px;
     border-radius: 4px;
+    margin-top: 10px;
     margin-bottom: 16px;
     border: none;
     border-bottom: 1px solid #1f53c5;
