--- a/html/css/Mantenedor.css
+++ b/html/css/Mantenedor.css
@@ -54,14 +54,15 @@ th{
     background-color: transparent;
 }
 
-.filtro2{
+.agregar{
     border: none;
     border-bottom: 1px solid  rgba(255, 255, 255, 0.349);
     width: 100%;
     text-align: left;
-    padding: 8px;
+    padding: 4px;
     color: white;
     background-color: transparent;
+    margin-left: 0px;
 }
 
 option{
