--- a/html/css/Mantenedor.css
+++ b/html/css/Mantenedor.css
@@ -86,8 +86,8 @@ option{
 .botonadd{
     border: none;
     width: 100%;
-    text-align: center;
-    padding: 8px;
+    text-align: left;
+    padding: 0px;
     font-size: 18px;
     color: white;
     background-color: transparent;
